--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ API_URL="https://api.uptimerobot.com/v2/"
 # UptimeRobot Api Keys - required
 ## This project only requires Read-only API key
 ## https://dashboard.uptimerobot.com/integrations
-API_KEY=""
+API_KEY="ur1930937-0236db0b37d2ec79cb1334e8"
 
 # Deployment platform - required
 ## cloudflare ( default ) | auto
